--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/d0cee80ade.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React App</title>
   </head>
   <body>
